# hdl

./: %  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  ex.hirl  hdl.code-workspace  res.txt
hdllang/: Cargo.toml
hdllang/src/: analyzer.rs  compiler_diagnostic.rs  compiler_error.rs  core.rs  diagnostic_buffer.rs  hirn.rs  lexer.rs  lib.rs  parser.rs  serializer.rs  source_span.rs  symtable.rs  utils.rs
hdllang/src/analyzer/: already_created.rs  analyze_qualifiers.rs  analyzer_pass.rs  combined_qualifiers.rs  combining_pass.rs  compiled_info.rs  global_analyzer_context.rs  local_analyzer_context.rs  module_declaration_scope.rs  module_declared.rs  module_implementation_scope.rs  scope.rs  semantic_analyzer.rs  semantic_error.rs  semantical_analyzer.rs  sensitivity_graph.rs  signal_sensitivity.rs  toplevel_pass.rs  variable.rs  variable_declared.rs  variable_dependency_graph.rs  variable_kind.rs
hdllang/src/analyzer/variable/: direction.rs  module_instance.rs  signal.rs  signal_sensitivity.rs  signal_signedness.rs  variable_kind.rs
hdllang/src/core/: comment_table.rs  compiler_diagnostic.rs  compiler_error.rs  diagnostic_buffer.rs  hdl_type.rs  id_table.rs  lexer_test.rs  numeric_constant.rs  numeric_constant_table.rs  source_span.rs  source_with_name.rs  wide_int.rs
hdllang/src/hirn/: backend.rs  container.rs  design.rs  error.rs  expression.rs  functional_blocks.rs  hirn_error.rs  module.rs  scope.rs  signal.rs  sv_backend.rs
hdllang/src/hirn/backend/: indenter.rs  sv_backend.rs
hdllang/src/hirn/design/: expression.rs  expression_ops.rs  module.rs  scope.rs  signal.rs
hdllang/src/lexer/: comment_table.rs  diagnostic.rs  id_table.rs  logos_lexer.rs  number_parser.rs  numeric_constant.rs  numeric_constant_parser.rs
hdllang/src/parser/: ast.rs  grammar.lalrpop  grammar_parser.rs  parser_context.rs  pretty_printer.rs
hdllang/src/parser/ast/: binary_expression.rs  direct_declarator.rs  direct_initializer.rs  expression.rs  import_path.rs  match_expression.rs  module_declaration_statement.rs  module_implementation_statement.rs  opcodes.rs  port_bind_statement.rs  pretty_printable.rs  range_expression.rs  root.rs  top_definition.rs  type_declarator.rs  type_name.rs  type_qualifier.rs  type_specifier.rs  variable_block.rs  variable_declaration.rs  variable_definition.rs
hdllang/src/parser/ast/expression/: binary_expression.rs  conditional_expression.rs  expr_eval.rs  identifier.rs  match_expression.rs  number.rs  parenthesized.rs  postfix_with_args.rs  postfix_with_id.rs  postfix_with_index.rs  postfix_with_range.rs  pretty_printable.rs  ternary_expression.rs  tuple.rs  unary_cast_expression.rs  (+1 more)
hdllang/src/serializer/: serializer_context.rs
hdllang/tests/: lexer_test.rs  parser_test.rs
hdllang/tests_files/: pipelined_division.hirl
hirn/: Cargo.toml
hirn/src/: codegen.rs  design.rs  elab.rs  lib.rs
hirn/src/codegen/: indenter.rs  sv.rs  sv_codegen.rs
hirn/src/codegen/sv/: sv_codegen.rs  sv_expr.rs
hirn/src/design/: comment.rs  design_error.rs  eval.rs  expression.rs  expression_eval.rs  expression_ops.rs  expression_width.rs  functional_blocks.rs  module.rs  numeric_constant.rs  scope.rs  signal.rs  utils.rs
hirn/src/design/expression/: dims_eval.rs  eval.rs  expression_eval.rs  expression_validate.rs  expression_width.rs  narrow_eval.rs  numeric_constant.rs  rust_ops.rs  type_eval.rs  width_expression.rs
hirn/src/elab/: assumptions.rs  elab_signal.rs  elaborator.rs  multi_pass_elab.rs  report.rs
hirn/src/elab/multi_pass_elab/: comb_verif_pass.rs  full_elab.rs  generic_resolve.rs  main_pass.rs  signal_graph_pass.rs  signal_usage_pass.rs  test_pass.rs
hirn/src/example/: main.rs
(+278 files in other folders)
