[package]
name = "hdl"
version = "0.1.0"
edition = "2021"

[dependencies]
"hdllang" = {path = "hdllang"}
"miette" = {version = ">=5.5", features = ["fancy"]}
"thiserror" = "1.0"
"clap" = {version = "4.1.8", features=["cargo"]}
env_logger = "0.10.0"
log = "0.4.17"
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.3.0"