[package]
name = "hdl"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["hdllang", "hirn"]

[dependencies]
"hdllang" = {path = "hdllang"}
"hirn" = {path = "hirn"}
"miette" = {version = ">=5.5", features = ["fancy"]}
"thiserror" = "1.0"
"clap" = {version = "4.1.8", features=["cargo"]}
env_logger = "0.11.1"
log = "0.4.17"
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # to be deleted
sha256 = "1.3.0" # to be deleted

[dev-dependencies]
rstest = "0.23.0"
tempfile = "3.8.0"
subprocess = "0.2.9"