[package]
name = "hdllang"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"miette" = ">=5.5"
"logos" = "0.13.0"
"thiserror" = "1.0"
"bimap" = "0.6.2"
"num-bigint" = "0.4.3"
"derive_more" = "0.99.17"
lalrpop-util = {version = "0.19.7",  features = ["lexer"]}
"regex" = "1"
log = "0.4.17"
