[package]
name = "hdllang"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"miette" = ">=5.5"
"logos" = "0.13.0"
"thiserror" = "1.0"
"bimap" = {version = "0.6.2", features = ["serde"]}
"num-bigint" = {version = "0.4.3", features = ["serde"]}
"derive_more" = "0.99.17"
lalrpop-util = {version = "0.20.0",  features = ["lexer"]}
"regex" = "1"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.1"