[package]
name = "hdllang"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"miette" = ">=5.5"
"logos" = "0.14.0"
"thiserror" = "1.0"
"bimap" = {version = "0.6.2", features = ["serde"]}
"num-bigint" = {version = "0.4.3", features = ["serde"]}
"derive_more" = "0.99.17"
lalrpop-util = {version = "0.20.0",  features = ["lexer"]}
"regex" = "1"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_with = {version = "3.0", features= ["json"]}
serde_json = "1.0"
itertools = "0.12.0"
paste = "1.0.14"
sha256 = "1.3.0"
num-traits = "0.2.16"
petgraph = "0.6.4"
"hirn" = {path = "./../hirn"}

[dev-dependencies]
rstest = "0.18.2"