[package]
name = "hirn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
log = "0.4.17"
regex = "1.7.3"
lazy_static = "1.4.0"
num-bigint = {version = "0.4.3"}
petgraph = "0.6.4"
dyn-clone = "1.0.14"

[dev-dependencies]
rstest = "0.23.0"

[[bin]]
name = "hirn_example"
path = "src/example/main.rs"
